project/waiter/static/css/orderWaiter.css
* {
  font-family: Montserrat;
}

.order-container {
  left: 10%;
  position: absolute;
  margin-top: 5%;
  width: 80%;
}

.order-box-outer {
  background-color: transparent;
  margin: 2%;
  float: left;
  width: 350px;
  height: 250px;
  font-size: 1em;
  perspective: 1000px;
}

.order-box-inner {
  position: relative;
  width: 100%;
  height: 100%;
  text-align: center;
  transition: transform 0.8s;
  transform-style: preserve-3d;
}

.order-box-outer:focus  .order-box-inner {
  transform: rotateY(180deg);
}

.order-box-front, .order-box-back {
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  border-bottom: 2px solid white;
}

.order-box-front {
  background-color: #15202B;
  color: white;
}

.order-box-back {
  background-color: #15202B;
  color: white;
  opacity: auto;
  overflow: auto;
  transform: rotateY(180deg);
}

.title {
  font-family: Montserrat;
  font-size: 120%;
  color: white;
  border-style: solid;
  border-top: none;
  border-left: none;
  border-right: none;
  padding-bottom: 1%;
}

.orderdetails {
  margin-top: 5%;
  margin-bottom: 5%;
}

.ordersummary {
  border: solid;
  border: none;
  border-bottom: 1px solid white;
  padding: 0 2% 2% 0;
}

.updatestatus {
width: 100%;
padding: 3%;
text-align: center;
font-size: 1em;
color: white;
border: 1px solid grey;
cursor: pointer;
background: linear-gradient(to top, #192734 50%, #212121 50%);
background-size: 100% 200%;
background-position: top;
transition: background-position 0.3s ease-in-out;
}

.updatestatus:hover{
background-position: bottom;
}

